syntax = "proto3";

package spine.test.options;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.options";
option java_outer_classname = "BytesDirectionOptionProto";
option java_multiple_files = true;

import "google/protobuf/descriptor.proto";

enum BytesDirection {

    BD_UNKNOWN = 0;

    LITTLE_ENDIAN = 1;
    BIG_ENDIAN = 2;
}

extend google.protobuf.FieldOptions {

    BytesDirection direction = 73827;
}
